Add initial cv website files

--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
     <title>Lakshmi's personal site</title>
   </head>
   <body>
-     <img src="lakshmi-modified.png" alt="Lakshmi profile picture">
-     <h1>lakshmi's portal</h1>
-     <p><em>Degree student from <strong><a href="https://www.unitydegreecollege.com/home.html">Unity degree college</a></strong></em></p>
-     <p>
-        I am a Web developer.
-     </p>
+     <table>
+       <tr>
+         <td><img src="lakshmi-modified.png" alt="Lakshmi profile picture"></td>
+         <td><h1>lakshmi's portal</h1>
+         <p><em>Degree student from <strong><a href="https://www.unitydegreecollege.com/home.html">Unity degree college</a></strong></em></p>
+         <p>I am a Web developer.</p>
+          </td>
+       </tr>
+     </table>
      <hr>
      <h3>Education</h3>
      <ul>
